# ocaml-examples

./: .gitignore
aoc/: readme.md
hello_dream/: dune-project
hello_dream/lib/: config.ml  dune
hello_dream/test/: dune
hello_format/: main.ml
hello_logs/: dune-project
hello_logs/lib/: dune
hello_logs/test/: dune
musika/: build.sh  main.ml  note.ml
stdin_line_by_line/: stdin_line_by_line.ml
