(lang dune 3.17)

(name hello_dream)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name hello_dream)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  (dream (= "1.0.0~alpha7"))
  (lwt (= "5.9.0"))
  (lwt_ppx (= "5.8.0")))
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
