(lang dune 3.17)

(name hello_logs)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name hello_logs)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
   ocaml
   (logs (= "0.7.0")))
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
